[gd_scene load_steps=7 format=3 uid="uid://dtqwi5igc4dcj"]

[ext_resource type="Script" path="res://scripts/pressure_plate.gd" id="1_ymn6x"]
[ext_resource type="Texture2D" uid="uid://b33spqbu0deod" path="res://vsprites/stuff.png" id="2_22jf6"]
[ext_resource type="AudioStream" uid="uid://dcioeoiwmg5qf" path="res://sounds/landing.ogg" id="3_n7k1j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3jxn"]
size = Vector2(6.33333, 6)

[sub_resource type="Gradient" id="Gradient_cf230"]
offsets = PackedFloat32Array(0, 0.993506)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pv1x4"]
gradient = SubResource("Gradient_cf230")
fill = 1
fill_from = Vector2(0.486239, 0.449541)
fill_to = Vector2(0.733945, 0.0412844)

[node name="PressurePlate" type="Area2D"]
scale = Vector2(3, 3)
collision_layer = 9
script = ExtResource("1_ymn6x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(4, 1)
shape = SubResource("RectangleShape2D_c3jxn")

[node name="PressedSprite" type="Sprite2D" parent="."]
scale = Vector2(0.85, 0.667)
texture = ExtResource("2_22jf6")
region_enabled = true
region_rect = Rect2(53.9145, 38.9536, 36.1897, 9.21495)

[node name="UnpressedSprite" type="Sprite2D" parent="."]
scale = Vector2(0.85, 0.666667)
texture = ExtResource("2_22jf6")
region_enabled = true
region_rect = Rect2(5.66667, 35.9012, 36.7407, 12.2469)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0.333332, 0.166667)
scale = Vector2(0.322917, 0.0989583)
enabled = false
energy = 2.35
texture = SubResource("GradientTexture2D_pv1x4")

[node name="SFX" type="Node" parent="."]

[node name="ClickSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("3_n7k1j")
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
